feat: add crud demo
